Fix background attachment on mobile.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -195,6 +195,7 @@ pre {
   body {
     font-size: 2rem;
     background-position: center 16rem;
+    background-attachment: unset;
   }
   .wrapper {
     width: 100%;
